- register page frontend (#5)
* - register page frontend

* - cors config

* - save token in localStorage on register or login
 - added login page

* - changed form with Formik
 - added validation through validation schema
 - changes css for Register, Login, Header

* - remade breadcrumbs as per instructions
- finished registration and login validation

* - added "Email already in use" notification
 - transferred inline css to css file